--- a/ImageSlider/image-slider.css
+++ b/ImageSlider/image-slider.css
@@ -7,12 +7,12 @@
     display: flex;
 }
 
-.texts {
+.contents {
     position: relative;
 }
 
-.item-wrapper, .text-wrapper {
-    transition: all 1s;
+.item-wrapper, .content-wrapper, .contents {
+    transition: all 0.5s;
 }
 
 .item-wrapper {
@@ -24,10 +24,16 @@
     height: 100%;
 }
 
-.text-wrapper {
+.contents {
+    overflow: hidden;
+    border: 1px solid;
+    box-sizing: border-box;
+}
+
+.content-wrapper {
     opacity: 0;
-    position: absolute;
     width: 100%;
+    position: absolute;
 }
 
 .selected, .visible {
